@@ -9,6 +9,10 @@
 	make_standard_output_file_stream()
 	(get_standard_error_file_stream): use
 	make_standard_output_file_stream(stderr_handle)
+	(make_terminal_io): use handle_direction_compatible() in addition
+	to pipe_file_handle_p() to decide whether to create a terminal or
+	a standard file stream; this fixes bug #[ 2805778 ]: when a
+	standard handle is invalid, an empty stream is used
 
 2009-06-15  Sam Steingold  <sds@gnu.org>
 
